--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.14",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
