--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.25",
     "body-parser": "^1.20.2",
@@ -27,9 +26,21 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.14",
+    "@types/supertest": "^6.0.2",
+    "husky": "^9.0.11",
+    "istanbul": "^0.4.5",
+    "jest": "^29.7.0",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
