--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# my-brand-backend\"",
   "main": "index.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node output/server/index.js",
     "build": "tsc",
     "dev": "nodemon  server/index.ts",
     "test": "jest --silent",
@@ -28,27 +28,32 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "husky": "^9.0.11",
     "istanbul": "^0.4.5",
     "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "nyc": "^15.1.0",
     "supertest": "^6.3.4",
+    "swagger-jsdoc": "^6.2.8",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
- 
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
@@ -56,6 +61,4 @@
     ],
     "preset": "ts-jest"
   }
-
-
 }
