--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "\"# my-brand-backend\"",
   "main": "index.ts",
   "scripts": {
-    "start": "node output/server/index.js",
+    "start": "node dist/server/index.js",
     "build": "tsc",
     "dev": "nodemon  server/index.ts",
-    "test": "jest --silent",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "test:coverage": "nyc --reporter=lcov jest",
     "test:report": "nyc report --reporter=html"
   },
