--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,12 @@ jobs:
       - name: Running build command
         run: npm run build
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: soleil00/my-brand-backend
+
   #deploy_app_on_render:
   #  needs: build_app
  #   runs-on: ubuntu-latest
