--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,9 +2,9 @@ name: Deploying app on Render
 
 on:
   pull_request:
-    branches: [main]
+    branches: [main, main-2]
   push:
-    branches: [main]
+    branches: [main, main-2]
 
 jobs:
   install_dep:
@@ -12,22 +12,19 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          path: my-brand-backend
 
       - name: Install all dependencies
         run: npm install
-
-  Listing_dir:
-    runs-on: ubuntu-latest
-    steps:
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-
+        working-directory: my-brand-backend
+          
   build_app:
     needs: install_dep
     runs-on: ubuntu-latest
     steps:
       - name: Running build command
+        working-directory: my-brand-backend
         run: npm run build
 
       - name: Upload coverage reports to Codecov
