run i and b at the same time

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,18 +15,13 @@ jobs:
         with:
           path: my-brand-backend
 
-      - name: Install all dependencies
-        run: npm install
-        working-directory: my-brand-backend
+      - name: Install all dependencies and build app
+        run: npm install && npm run build
           
-  build_app:
+  upload_coverage:
     needs: install_dep
     runs-on: ubuntu-latest
     steps:
-      - name: Running build command
-        working-directory: my-brand-backend
-        run: npm run build
-
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
