--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install all dependencies and build app
         run: |
-          cd my-brand-backend
+          cd ${{ github.workspace }}/my-brand-backend
           npm install
           npm run build
           
