--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
@@ -36,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.14",
+    "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -51,12 +56,5 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "preset": "ts-jest"
   }
 }
