--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,48 +1,33 @@
-name: Deploying app on Render
+name: My brand ci
 
 on:
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - main-2
   push:
-    branches: [main]
+    branches:
+      - main
+      - main-2
 
 jobs:
-  install_dep:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
 
-      - name: Install all dependencies
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'  
+
+      - name: Install dependencies
         run: npm install
 
-  Listing_dir:
-    runs-on: ubuntu-latest
-    steps:
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - name: Run tests
+        run: npm test
 
-  build_app:
-    needs: install_dep
-    runs-on: ubuntu-latest
-    steps:
-      - name: Running build command
+      - name: Build app
         run: npm run build
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: soleil00/my-brand-backend
-
-  #deploy_app_on_render:
-  #  needs: build_app
- #   runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Deploy to Render
-  #      run: |
-  #        curl -X POST -H "Content-Type: application/json" -d '{"branch": "main", "public": true}' https://api.render.com/deploy/srv-cnt7f4acn0vc73evu8cg?key=D4J_OGegb1Y
-
-   #   - name: Start server
-   #     run: cd dist/server && node index.js
