--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,11 @@
 name: My brand ci
+name: My brand ci
 
 on:
   pull_request:
+    branches:
+      - main
+      - main-2
     branches:
       - main
       - main-2
@@ -9,10 +13,15 @@ on:
     branches:
       - main
       - main-2
+    branches:
+      - main
+      - main-2
 
 jobs:
   build:
+  build:
     runs-on: ubuntu-latest
+
 
     steps:
       - name: Checkout code
@@ -22,10 +31,22 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'  
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'  
+
+      - name: Install dependencies
       - name: Install dependencies
         run: npm install
 
+      - name: Run tests
+        run: npm test
+
+      - name: Build app
       - name: Run tests
         run: npm test
 
