--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
@@ -44,6 +45,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/ws": "^8.5.10",
     "husky": "^9.0.11",
     "istanbul": "^0.4.5",
     "jest": "^29.7.0",
